HelloUltraviolet/Fixtures/RejectedSource/Expressions/AsyncTypeArgCount/Source/Main.uv
//! Rejected async type specimen for Async with an invalid argument count.

public procedure asyncTypeArgCountReference() -> Async<i32> {
    return
}
